# cpp-final-project

./: .gitignore  CMakeLists.txt  README.md
include/bmp/: BMPImage.h
include/core/: BaseFilter.h  FilterDescriptor.h  FilterFactory.h  FiltersRegistration.h  Parser.h  Pipeline.h
include/filters/: Crop.h  EdgeDetection.h  GaussianBlur.h  Grayscale.h  Negative.h  PointSurroundingsBlur.h  PointSurroundingsBlurFast.h  Sharpening.h
main/: image_processor.cpp
src/bmp/: BMPImage.cpp
src/core/: BaseFilter.cpp  FilterFactory.cpp  FiltersRegistration.cpp  Parser.cpp  Pipeline.cpp
src/filters/: Crop.cpp  EdgeDetection.cpp  GaussianBlur.cpp  Grayscale.cpp  Negative.cpp  PointSurroundingsBlur.cpp  PointSurroundingsBlurFast.cpp  Sharpening.cpp
